# file-organizer

./: .gitignore
build-file-sorter-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  file-sorter
build-file-sorter-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-2caf23b17fb48edd2d60.json  cmakeFiles-v1-edd3b5a43e5a7ebf5a7f.json  codemodel-v2-647ab1eb5651d8a92588.json  index-2023-02-12T18-14-24-0262.json  target-file-sorter-Debug-3ad953008d5636d0cc01.json
build-file-sorter-Desktop-Debug/.cmake/api/v1/reply.prev/: directory-.-Debug-a5bb524912c9a20fdd48.json  target-file-sorter_autogen-Debug-30f4352e7747f564ce24.json
build-file-sorter-Desktop-Debug/file-sorter_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-file-sorter-Desktop-Debug/file-sorter_autogen/include/: ui_mainwindow.h
file-sorter/: CMakeLists.txt  CMakeLists.txt.user.af61acf  CMakeLists.txt.user.cd0eec0  FileOperation.cpp  FileOperation.hpp  file-sorter_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
file-sorter/UI/: Audio.cpp  Documents.cpp  Other.cpp  Pictures.cpp  Videos.cpp
